# CPPChessConsole

./: .dockerignore  .gitignore  .gitignore.txt  CMakeLists.txt  Chess.sln  Dockerfile  README.md  dockerRun.sh
Chess/: Bishop.cpp  Bishop.h  Chess.vcxproj  Chess.vcxproj.filters  ChessGame.cpp  ChessGame.h  ChessPiece.cpp  ChessPiece.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  main  main.cpp
Chess/src/: ChessGame.cpp  ChessPiece.h  King.h  Pawn.h  Queen.cpp  main.cpp
Chess/x64/Debug/: Chess.exe.recipe  Chess.ilk  vc143.idb
Chess/x64/Debug/Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chess.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
source/: CMakeLists.txt  main.cpp
source/include/: Bishop.h  Queen.h
source/src/: Bishop.cpp  ChessGame.cpp  ChessPiece.cpp  King.cpp  Pawn.cpp
